# grtm_cuda

./: CMakeLists.txt  README.md  green1.py  green2.py  green3.py  green4.py  green6.py  greent.py  plotfig.py  plotfig2.py  run.sh
cusrc/: main.cu
cusrc/example/: crust1.0.txt
cusrc/popm/: popm.h
cusrc/popm/func/: eigmatrix.cu1  green.cu  grtc.c  integral.cu  source.cu1
cusrc/scilib/: cucomplex.hpp  mathematics.h
cusrc/scilib/func/: besselj.cu  matinv.cu1  matrix.cu1
demo/: crust1.0.txt  input.txt  oname_t.txt  oname_w.txt
